--- a/iotmiddleware/pom.xml
+++ b/iotmiddleware/pom.xml
@@ -22,6 +22,11 @@
          <version>3.8.1</version>
          <scope>test</scope>
       </dependency>
+       <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.5</version>
+        </dependency>
    </dependencies>
    <build>
       <plugins>
