--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -24,6 +24,5 @@ hs_err_pid*
 
 #custom
 iotmiddleware/.settings
-iotmiddleware/target
 iotmiddleware/.classpath
 iotmiddleware/.project
