--- a/iotmiddleware/pom.xml
+++ b/iotmiddleware/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.5</version>
         </dependency>
+         <dependency>
+        <groupId>org.eclipse.paho</groupId>
+        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+        <version>1.2.0</version>
+    </dependency>
    </dependencies>
    <build>
       <plugins>
