--- a/iotmiddleware/pom.xml
+++ b/iotmiddleware/pom.xml
@@ -34,6 +34,12 @@
         <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
         <version>1.2.1</version>
     </dependency>
+
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.13</version>
+</dependency>
    </dependencies>
    <build>
       <plugins>
