--- a/iotmiddleware/pom.xml
+++ b/iotmiddleware/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.13</version>
         </dependency>
+        <dependency>
+	        <groupId>org.apache.httpcomponents</groupId>
+	        <artifactId>httpclient</artifactId>
+	        <version>4.5.10</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
