--- a/iotmiddleware/pom.xml
+++ b/iotmiddleware/pom.xml
@@ -45,6 +45,11 @@
             <version>4.5.10</version>
         </dependency>
         <dependency>
+    <groupId>com.pi4j</groupId>
+    <artifactId>pi4j-core</artifactId>
+   <version>1.2</version>
+</dependency>
+        <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>2.3.1</version>
